Fixing bug #134824 (Position angle of deep sky objects changes with pointing).  A 90-degree adjustment to the position angles was being applied incorrectly.

Thanks for the report.  Also fixing a similar issue in trunk.

CCMAIL: kstars-devel@kde.org
BUG: 134824
 

svn path=/branches/KDE/3.5/kdeedu/kstars/; revision=589956